[package]
name = "web_api"
version = "0.1.0"
authors = ["danielmarius1995 <50268474+danielmarius1995@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "*"
router = "*"
logger = "*"
env_logger = "*"
serde = { version ="*", features = ["derive"]}
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["v4", "serde"] }
